--- a/.github/workflows/docker-latest-tag.yaml
+++ b/.github/workflows/docker-latest-tag.yaml
@@ -34,5 +34,5 @@ jobs:
         with:
           push: true
           context: .
-          tags: javadmnjd/static-serve-demo:${{ github.sha }}
+          tags: javadmnjd/static-serve-demo:latest
           file: Dockerfile
